<resources>
    <string name="Older">Older</string>
    <string name="Past14days">Past 14 days</string>
    <string name="a11y_back_button">Back</string>
    <string name="a11y_home_button">Home</string>
    <string name="a11y_profile_content_desc">Profile</string>
    <string name="a11y_recent_search_app_widget_promo_close_button">close</string>
    <string name="a11y_share_button">Share</string>
    <string name="a11y_updated_terms">Updated Terms</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accept_terms">Accept Terms</string>
    <string name="accounting_license_item_title">Accounting licenses</string>
    <string name="action_forward">Forward</string>
    <string name="action_home">Home</string>
    <string name="action_refresh">Reload</string>
    <string name="action_share">Share</string>
    <string name="action_stop">Stop</string>
    <string name="activity_name">Indeed Job Search</string>
    <string name="activity_not_found">There are no apps that can handle the following URL.</string>
    <string name="ad">Ad</string>
    <string name="ad_header_img">Header Image</string>
    <string name="ad_logo">Logo</string>
    <string name="ad_transparency_info">Info</string>
    <string name="ad_transparency_title">Ad Transparency</string>
    <string name="add_accounting_license">Add accounting license</string>
    <string name="add_additional_information">Add additional information</string>
    <string name="add_another">Add another</string>
    <string name="add_another_section">Add another section</string>
    <string name="add_award">Add award</string>
    <string name="add_certification">Add certification or license</string>
    <string name="add_driver_license">Add commercials driver’s license</string>
    <string name="add_group">Add group</string>
    <string name="add_info">Add %s</string>
    <string name="add_language">Add language</string>
    <string name="add_locations_button_label">Add another</string>
    <string name="add_locations_placeholder">City, State</string>
    <string name="add_locations_tooltip">Add up to three locations</string>
    <string name="add_military_service">Add military service</string>
    <string name="add_nursing_license">Add nursing license</string>
    <string name="add_patent">Add patent</string>
    <string name="add_profile_photo">Add profile photo</string>
    <string name="add_publication">Add publication</string>
    <string name="add_skill">Add skill</string>
    <string name="add_summary_header">Add summary</string>
    <string name="add_work_wellbeing_header">Add work wellbeing</string>
    <string name="additional_skills">Additional skills</string>
    <string name="alert_description">Alert</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="android_feedback_email_address">android-error-reports@indeed.com</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="any_updates_on_this_job">Any updates on this job?</string>
    <string name="any_updates_since_you_applied">Any updates since you applied?</string>
    <string name="anytime">anytime</string>
    <string name="app_incompatible_for_file">Sorry, the app you selected does not support file uploads. Please select another app.</string>
    <string name="app_name">Indeed Job Search</string>
    <string name="app_name_no_build_variant">WELL-KNOWN resource: Override with app name</string>
    <string name="app_name_pointer">@string/app_name</string>
    <string name="app_rating_dialog_multi_negative_feedback_button_contact_no">No, thanks</string>
    <string name="app_rating_dialog_multi_negative_feedback_button_contact_yes">Visit help center</string>
    <string name="app_rating_dialog_multi_negative_feedback_subtext">Check out help center articles or contact us for more assistance</string>
    <string name="app_rating_dialog_multi_negative_feedback_title">Thanks for letting us know</string>
    <string name="app_rating_dialog_multi_rate_us_no">Not now</string>
    <string name="app_rating_dialog_multi_rate_us_subtext">Rate us on the Google Play Store</string>
    <string name="app_rating_dialog_multi_rate_us_title">Glad we are helping</string>
    <string name="app_rating_dialog_multi_rate_us_yes">Rate us</string>
    <string name="app_rating_dialog_multi_splash_button_no">Not really</string>
    <string name="app_rating_dialog_multi_splash_button_yes">Yes</string>
    <string name="app_rating_dialog_multi_splash_title">Enjoying the Indeed App?</string>
    <string name="app_widget_google_support_link">https://support.google.com/android/answer/9450271?hl=en</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="application_error">Application Error</string>
    <string name="application_pending">Application pending</string>
    <string name="application_started">Application started</string>
    <string name="application_status">Application Status</string>
    <string name="application_viewed">Application viewed</string>
    <string name="application_withdraw">Application withdrawn</string>
    <string name="applied">Applied</string>
    <string name="applied_people">Around %1$s people have applied on this site</string>
    <string name="applied_tab_dialog_body">There are a few reasons why some applications may not appear here. For example, we are unable to show you:\n\n • Applications completed outside of Indeed\n • Applications completed using a different Indeed account or email address\n • Applications completed more than 6 months ago</string>
    <string name="applied_tab_empty_screen_sub_title">Applications completed on Indeed will appear here for 6 months.</string>
    <string name="applied_tab_empty_screen_title">No applications yet</string>
    <string name="applied_tab_find_job_btn_text">Find jobs</string>
    <string name="applied_tab_name">Applied</string>
    <string name="apply_now">Apply Now</string>
    <string name="april">April</string>
    <string name="archive">Archive</string>
    <string name="archived_tab_dialog_body">To keep things tidy, we remove archived applications that are older than 6 months.</string>
    <string name="archived_tab_empty_screen_sub_title">To keep things tidy, we remove applications that are older than 6 months.</string>
    <string name="archived_tab_empty_screen_title">No archived applications</string>
    <string name="archived_tab_name">Archived</string>
    <string name="arrow_icon">Arrow icon</string>
    <string name="asset_statements">[{ \"include\": \"https://secure.indeed.com/.well-known/assetlinks.json\" }]</string>
    <string name="audio_menu">Audio menu</string>
    <string name="august">August</string>
    <string name="auto_apply_started_toast_message">Review and submit later in My Jobs.</string>
    <string name="auto_apply_started_toast_title">We\'ll start filling out your application</string>
    <string name="autofill">Autofill</string>
    <string name="bad_file_type_error_hint">Make sure your resume is a pdf, txt, doc, docx, or rtf file.</string>
    <string name="bad_file_type_error_message">We couldn\'t upload your resume</string>
    <string name="beneficiary">Beneficiary</string>
    <string name="biweekly">bi-weekly</string>
    <string name="block_app_body">Your device isn’t compatible with the latest app version. You might not be able to use all features in the app.</string>
    <string name="block_app_title">Get the best Indeed experience in your browser</string>
    <string name="blocking_pending_verification_body">Please consult the parent or guardian who supervises this Google Play account to request permission.</string>
    <string name="blocking_pending_verification_title">Parental control approval required</string>
    <string name="bookmark_icon">Bookmark icon</string>
    <string name="bottom_nav_label_ace">Career Scout</string>
    <string name="bottom_nav_label_home">Home</string>
    <string name="bottom_nav_label_jp_discover">Discover</string>
    <string name="bottom_nav_label_jp_home">Home</string>
    <string name="bottom_nav_label_jp_myjobs">My Jobs</string>
    <string name="bottom_nav_label_jp_mypage">My Page</string>
    <string name="bottom_nav_label_jp_search">Search</string>
    <string name="bottom_nav_label_messages">Messages</string>
    <string name="bottom_nav_label_my_jobs">My Jobs</string>
    <string name="bottom_nav_label_profile">Profile</string>
    <string name="bottom_nav_label_search">Search</string>
    <string name="bottom_nav_top_bar_title_notifications">Notifications</string>
    <string name="bottom_nav_top_bar_title_profile">Profile</string>
    <string name="native_nav_indeed_logo">Back to Homepage</string>
    <string name="native_nav_menu">Open menu</string>
    <string name="native_nav_messaging">Go to messages</string>
    <string name="native_nav_notifications">Go to notifications</string>
    <string name="open_in_browser">Open in browser</string>
    <string name="openchat_create_room_category">Category</string>
    <string name="openchat_create_room_category_guide">Your OpenChat will be displayed in the selected category.</string>
    <string name="openchat_create_room_description_guide">Enter keywords using #hashtags</string>
    <string name="openchat_create_room_description_placeholder">Enter description</string>
    <string name="openchat_create_room_name_placeholder">OpenChat name</string>
    <string name="openchat_create_room_search">Allow search</string>
    <string name="openchat_create_room_search_guide">Others will be able to search for your OpenChat.</string>
    <string name="recent_search_app_widget_no_result_hint">Find jobs by keyword or location.</string>
    <string name="recent_search_app_widget_title">Recent searches</string>
    <string name="recent_search_app_widget_welcome_message">Let\'s get started</string>
    <string name="reg_promo_sign_in_button_text">Sign in</string>
</resources>