<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:icon="@drawable/ic_idl_refresh_24"
        android:id="@+id/action_refresh"
        android:visible="false"
        android:title="@string/action_refresh"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_idl_close_circle_24"
        android:id="@+id/action_stop"
        android:title="@string/action_stop"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom"/>
    <item
        android:icon="@drawable/ic_idl_native_android_share_24"
        android:id="@+id/action_share"
        android:title="@string/action_share"
        app:iconTint="?android:attr/textColorPrimary"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/action_forward"
        android:visible="false"
        android:title="@string/action_forward"
        app:showAsAction="never"/>
    <item
        android:id="@+id/open_in_browser"
        android:title="@string/open_in_browser"
        app:showAsAction="never"/>
</menu>
