<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nativeNavIndeedPrimaryLogo"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="75dp"
        android:layout_height="20dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/native_nav_indeed_logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nativeNavIndeedSecondaryLogo"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:scaleType="fitCenter"
        android:contentDescription="@string/native_nav_indeed_logo"
        android:layout_marginStart="15dp"
        app:layout_constraintStart_toEndOf="@+id/nativeNavIndeedPrimaryLogo"
        app:layout_constraintTop_toTopOf="@+id/nativeNavMessaging"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="13sp"
        android:textStyle="bold"
        android:textColor="@color/idl_aurora_neutral_0"
        android:gravity="center"
        android:id="@+id/unreadMessagesCount"
        android:background="@drawable/ic_native_nav_unread_badge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indeed_sans_bold"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="30dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/nativeNavMessaging"
        app:layout_constraintStart_toStartOf="@+id/nativeNavMessaging"
        app:layout_constraintTop_toTopOf="@+id/nativeNavMessaging"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nativeNavMessaging"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tint="?attr/colorOnSurface"
        android:contentDescription="@string/native_nav_messaging"
        app:layout_constraintEnd_toStartOf="@+id/nativeNavNotifications"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_native_nav_messaging"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="14sp"
        android:textStyle="bold"
        android:textColor="@color/idl_aurora_neutral_0"
        android:gravity="center"
        android:id="@+id/newNotificationsCount"
        android:background="@drawable/ic_native_nav_unread_badge"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/indeed_sans_bold"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:layout_marginStart="25dp"
        android:elevation="5dp"
        app:layout_constraintEnd_toEndOf="@+id/nativeNavNotifications"
        app:layout_constraintStart_toStartOf="@+id/nativeNavNotifications"
        app:layout_constraintTop_toTopOf="@+id/nativeNavNotifications"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nativeNavNotifications"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tint="?attr/colorOnSurface"
        android:contentDescription="@string/native_nav_notifications"
        app:layout_constraintEnd_toStartOf="@+id/nativeNavSignIn"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_idl_notification_24"/>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/nativeNavSignIn"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reg_promo_sign_in_button_text"
        app:icon="@drawable/ic_native_nav_sign_in_user"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="@+id/nativeNavMenu"
        app:layout_constraintEnd_toStartOf="@+id/nativeNavMenu"
        app:layout_constraintTop_toTopOf="@+id/nativeNavMenu"
        style="@style/Widget.IndeedJobSearch.Button"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/nativeNavMenu"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tint="?attr/colorOnSurface"
        android:contentDescription="@string/native_nav_menu"
        app:layout_constraintEnd_toStartOf="@+id/shareButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_native_nav_menu"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/shareButton"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tint="?attr/colorOnSurface"
        android:contentDescription="@string/a11y_share_button"
        app:layout_constraintEnd_toStartOf="@+id/homeButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_idl_native_android_share_24"/>
    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/homeButton"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:tint="?attr/colorOnSurface"
        android:contentDescription="@string/a11y_home_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_idl_home_24"/>
</androidx.constraintlayout.widget.ConstraintLayout>
