<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:tag="layout/open_chat_info_fragment_0"
    android:background="@color/openchat_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@color/background"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <EditText
            android:textSize="18sp"
            android:textColor="@color/target_item_text"
            android:textColorHint="@color/text_hint"
            android:gravity="center_vertical"
            android:id="@+id/nameEditText"
            android:tag="binding_1"
            android:background="@color/background"
            android:paddingTop="30dp"
            android:paddingBottom="19dp"
            android:layout_width="0dp"
            android:layout_height="121dp"
            android:hint="@string/openchat_create_room_name_placeholder"
            android:includeFontPadding="true"
            android:maxLength="@integer/max_chatroom_name_length"
            android:drawablePadding="18dp"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:layout_marginEnd="13dp"
            android:importantForAutofill="no"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@color/text_hint"
            android:layout_gravity="end"
            android:id="@+id/nameMaxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText"/>
        <View
            android:id="@+id/name_divider"
            android:background="@color/openchat_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameMaxTextView"/>
        <EditText
            android:textSize="15sp"
            android:textColor="@color/target_item_text"
            android:textColorHint="@color/text_hint"
            android:gravity="center_vertical"
            android:id="@+id/descriptionEditText"
            android:tag="binding_2"
            android:background="@color/background"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:layout_width="0dp"
            android:layout_height="112dp"
            android:hint="@string/openchat_create_room_description_placeholder"
            android:includeFontPadding="true"
            android:maxLength="@integer/max_chatroom_description_length"
            android:drawablePadding="18dp"
            android:inputType="text"
            android:importantForAutofill="no"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_divider"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@color/openchat_text_color"
            android:gravity="center_vertical"
            android:id="@+id/descriptionMaxTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:layout_below="@+id/descriptionEditText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"/>
        <TextView
            android:textSize="13sp"
            android:textColor="@color/openchat_text_color"
            android:gravity="center_vertical"
            android:id="@+id/description_detail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="9dp"
            android:text="@string/openchat_create_room_description_guide"
            app:layout_constraintRight_toLeftOf="@+id/descriptionMaxTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/descriptionEditText"/>
        <View
            android:id="@+id/description_divider"
            android:background="@color/openchat_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_detail"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/target_item_text"
            android:ellipsize="end"
            android:id="@+id/category_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/openchat_create_room_category"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/description_divider"/>
        <TextView
            android:textSize="14sp"
            android:textColor="@color/openchat_category"
            android:ellipsize="end"
            android:id="@+id/categoryLabelTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:maxLines="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_title"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/openchat_text_color"
            android:ellipsize="end"
            android:id="@+id/category_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="2dp"
            android:text="@string/openchat_create_room_category_guide"
            android:maxLines="2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/categoryLabelTextView"/>
        <View
            android:id="@+id/category_divider"
            android:background="@color/openchat_divider"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_guide"/>
        <androidx.constraintlayout.widget.ConstraintLayout
            android:orientation="vertical"
            android:id="@+id/searchIncludedContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minHeight="67dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/category_divider">
            <TextView
                android:textSize="16sp"
                android:textColor="@color/target_item_text"
                android:ellipsize="end"
                android:id="@+id/search_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/openchat_create_room_search"
                android:maxLines="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <TextView
                android:textSize="12sp"
                android:textColor="@color/openchat_text_color"
                android:ellipsize="end"
                android:id="@+id/search_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:text="@string/openchat_create_room_search_guide"
                android:maxLines="2"
                app:layout_constraintEnd_toStartOf="@+id/searchIncludedCheckBox"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/search_title"/>
            <CheckBox
                android:id="@+id/searchIncludedCheckBox"
                android:tag="binding_3"
                android:focusable="true"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/list_checkbox_img"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
