<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/app_widget"
    android:background="@color/ijs_aurora_neutral_background"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="48dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp">
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/app_widget_indeed_icon_12x17"
            android:contentDescription="@null"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/ijs_aurora_primary_text"
            android:layout_gravity="center_vertical"
            android:id="@+id/recent_search_app_widget_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/recent_search_app_widget_title"
            android:layout_weight="1"
            android:fontFamily="@font/indeed_sans_bold"
            android:layout_marginStart="8dp"/>
        <ImageView
            android:layout_gravity="center_vertical"
            android:id="@+id/recent_search_app_widget_search_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_app_widget_search_icon_primary"
            android:contentDescription="@null"/>
    </LinearLayout>
    <ListView
        android:orientation="vertical"
        android:id="@+id/recent_search_app_widget_content"
        android:background="@drawable/app_widget_list_view_background"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="@drawable/app_widget_list_view_divider"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/recent_search_app_widget_no_result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp">
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:textColor="@color/ijs_aurora_neutral_text"
            android:paddingTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent_search_app_widget_welcome_message"
            android:fontFamily="@font/indeed_sans_bold"
            android:textAlignment="center"/>
        <TextView
            android:textSize="12sp"
            android:textColor="@color/ijs_aurora_neutral_subtext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recent_search_app_widget_no_result_hint"
            android:fontFamily="@font/indeed_sans_bold"
            android:textAlignment="center"/>
        <TextView
            android:background="@drawable/app_widget_search_box_background"
            android:padding="8dp"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:drawableEnd="@drawable/ic_app_widget_search_icon"/>
    </LinearLayout>
</LinearLayout>
